[package]
name = "crust_watchdog"
version = "1.0.0-alpha"
edition = "2021"
authors = ["CrustGame Team"]
description = "Watchdog service for CrustGame - System monitoring and auto-recovery"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3", features = ["winbase", "processthreadsapi", "psapi"] }
ctrlc = "3.4"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
